--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap");
+
+body {
+  font-family: "Roboto Mono", monospace;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
